--- a/index.html
+++ b/index.html
@@ -9,5 +9,33 @@
   </head>
   <body>
 
-  </body>
+<div class="header">
+  <h1>Quotebook</h1>
+</div>
+<div class="main-body">
+  <div class="title">  
+    <h2>Author Quotes</h2>  
+  </div>
+  <div class="textbox1">
+    <p><strong>Just because I dont care, does'nt mean I don't undertand.</strong></p>  
+    <div class="source">Homer Simpson</div> 
+  </div>
+  <div class="texbox2">
+    <p><strong>I'm not superstitious, but I am a little stitious.</strong></p>
+    <div class="source">Michael Scott</div>
+  </div>
+  <div class="textbox3">
+    <p><strong>Learning to code is easy!</strong></p>
+    <div class="source">No one Ever</div>
+  </div>
+  <div class="title2">
+    <h2>Musician Quotes</h2>
+    <div class="textbox4">
+      <p><strong>Lose your dreams and you might lose your mind.</strong></p>
+      <div class="source">Mick Jagger</div>
+    </div>
+
+  </div>
+</div>
+</body>
 </html>
