finished styling and added alternating colours

--- a/index.html
+++ b/index.html
@@ -5,37 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Dosis"
+    />
     <title>QuoteBook</title>
   </head>
   <body>
-
-<div class="header">
-  <h1>Quotebook</h1>
-</div>
-<div class="main-body">
-  <div class="title">  
-    <h2>Author Quotes</h2>  
-  </div>
-  <div class="textbox1">
-    <p><strong>Just because I dont care, does'nt mean I don't undertand.</strong></p>  
-    <div class="source">Homer Simpson</div> 
-  </div>
-  <div class="texbox2">
-    <p><strong>I'm not superstitious, but I am a little stitious.</strong></p>
-    <div class="source">Michael Scott</div>
-  </div>
-  <div class="textbox3">
-    <p><strong>Learning to code is easy!</strong></p>
-    <div class="source">No one Ever</div>
-  </div>
-  <div class="title2">
-    <h2>Musician Quotes</h2>
-    <div class="textbox4">
-      <p><strong>Lose your dreams and you might lose your mind.</strong></p>
-      <div class="source">Mick Jagger</div>
+    <div class="header">
+      <h1>Quotebook</h1>
     </div>
-
-  </div>
-</div>
-</body>
+    <div class="main-body">
+      <div class="title">
+        <h2>Author Quotes</h2>
+      </div>
+      <div class="textbox">
+        <p>
+          <strong
+            >"Just because I dont care, doesn't mean I don't undertand."</strong
+          >
+        </p>
+        <p class="source">-Homer Simpson</p>
+      </div>
+      <div class="textbox">
+        <p>
+          <strong>"I'm not superstitious, but I am a little stitious."</strong>
+        </p>
+        <p class="source">-Michael Scott</p>
+      </div>
+      <div class="textbox">
+        <p><strong>"Learning to code is easy!"</strong></p>
+        <p class="source">-No one Ever</p>
+      </div>
+      <div class="title2">
+        <h2>Musician Quotes</h2>
+        <div class="textbox4">
+          <p>
+            <strong>"Lose your dreams and you might lose your mind."</strong>
+          </p>
+          <div class="source">-Mick Jagger</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
